<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/card_list_item_card"
    android:layout_margin="5dp">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/card_list_item_info"
            android:background="@color/DiscordLightBlack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:scaleType="centerCrop"
                android:layout_gravity="center"
                android:contentDescription="@string/profile_pic"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@null"
                android:src="@drawable/ic_account_circle_white_54dp" />
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:paddingStart="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    tools:ignore="RtlCompat,RtlSymmetry">
                    <TextView
                        android:textColor="@android:color/white"
                        android:id="@+id/card_list_item_tipo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAllCaps="true"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        tools:text="ASIGNACIÓN" />
                    <TextView
                        android:textColor="@android:color/white"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:text="@string/sign" />

                    <TextView
                        android:textColor="@android:color/white"
                        android:id="@+id/card_list_item_nivel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        tools:text="Provincial" />
                </LinearLayout>
                <LinearLayout
                    android:paddingStart="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    tools:ignore="RtlSymmetry">
                    <TextView
                        android:textColor="@android:color/white"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fecha_creada"/>
                    <TextView
                        android:textColor="@android:color/white"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:id="@+id/card_list_item_date"/>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
        <View
            android:background="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="2dp"/>
        <View
            android:id="@+id/card_list_item_banner"
            android:background="@color/DiscordLightBlack"
            android:layout_width="match_parent"
            android:layout_height="4dp"/>
        <View
            android:background="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="2dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/card_list_item_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:textSize="14sp"
                tools:text="@string/lorem_ipsum" />
        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>